[gd_scene format=3 uid="uid://settings-screen"]

[ext_resource path="res://scripts/SettingsScreen.gd" type="Script" id=1]
[ext_resource path="res://scripts/UIButtonFeedback.gd" type="Script" id=2]

[node name="SettingsScreen" type="Control"]
script = ExtResource( 1 )
anchors_preset = 15

[node name="Background" type="ColorRect" parent="SettingsScreen"]
anchors_preset = 15
color = Color(0.04, 0.07, 0.11)

[node name="Content" type="Panel" parent="SettingsScreen"]
anchors_preset = 5
margin_left = 90
margin_right = -90
margin_top = 160
margin_bottom = -160

[node name="VBox" type="VBoxContainer" parent="Content"]
anchors_preset = 15
margin_left = 28
margin_top = 28
margin_right = -28
margin_bottom = -28
separation = 18

[node name="Title" type="Label" parent="VBox"]
text = "Settings"
align = 1

[node name="ThemeOptions" type="HBoxContainer" parent="VBox"]
alignment = 1
separation = 8

[node name="ThemeLabel" type="Label" parent="ThemeOptions"]
text = "Theme:"

[node name="ThemeOption" type="OptionButton" parent="ThemeOptions"]

[node name="GridOptions" type="HBoxContainer" parent="VBox"]
alignment = 1
separation = 8

[node name="GridLabel" type="Label" parent="GridOptions"]
text = "Grid:"

[node name="GridOption" type="OptionButton" parent="GridOptions"]

[node name="SoundToggle" type="CheckButton" parent="VBox"]
text = "Sound"

[node name="MusicToggle" type="CheckButton" parent="VBox"]
text = "Music"

[node name="HintsToggle" type="CheckButton" parent="VBox"]
text = "Hints"

[node name="SpeedControls" type="HBoxContainer" parent="VBox"]
alignment = 1
separation = 8

[node name="SpeedLabel" type="Label" parent="SpeedControls"]
text = "Animation Speed"

[node name="SpeedSlider" type="HSlider" parent="SpeedControls"]
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="BackButton" type="Button" parent="VBox"]
script = ExtResource( 2 )
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back"]
